Criado end point para noticias dentro da aplicação e adicionado tela para exibição das notícias.
